--- a/Mango.Web/Views/Product/ProductIndex.cshtml
+++ b/Mango.Web/Views/Product/ProductIndex.cshtml
@@ -44,7 +44,7 @@
                         <a asp-action="ProductEdit" class="btn btn-success" asp-route-productId="@item.ProductId">
                             <i class="fas fa-edit"></i>
                         </a>
-                        <a asp-action="DeleteProduct" class="btn btn-danger" asp-route-productId="@item.ProductId">
+                        <a asp-action="ProductDelete" class="btn btn-danger" asp-route-productId="@item.ProductId">
                             <i class="fas fa-trash"></i>
                         </a>
                     </td>
